ADD: password validation added
Validating password and sending back
jwt added.
